# git-zcrypt

./: .gitattributes  Cargo.toml  README.md  progress.toml
.github/workflows/: ci.yml
codex-notes/auto-check-executable-sizes/: feature_list.json  plan.md  research.md
codex-notes/compress-encrypt-filter/: feature_list.json  plan.md  research.md
codex-notes/executable-size-reduction/: feature_list.json  plan.md  research.md
codex-notes/fix-clone-smudge/: feature_list.json  plan.md  research.md
codex-notes/password-kdf-design/: feature_list.json  plan.md  research.md
docs/: data-formats.md
secrets/: secret.txt
src/: blob.rs  cli.rs  compression.rs  crypto.rs  error.rs  git_config.rs  index_json.rs  kdf.rs  key_manifest.rs  key_store.rs  main.rs
tests/: filter_roundtrip.rs
