[package]
name = "git-zcrypt"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Git clean/smudge filter that compresses and encrypts file contents"

[dependencies]
argon2 = { version = "0.5.3", default-features = false, features = ["alloc", "zeroize"] }
chacha20poly1305 = { version = "0.11.0", default-features = false, features = ["alloc", "zeroize"] }
flate2 = { version = "1.1.5", default-features = false, features = ["rust_backend"] }
getrandom = { version = "0.4.3", default-features = false, features = ["std"] }
rpassword = { version = "7.5.4", default-features = false }
sha2 = { version = "0.11.0", default-features = false }
zeroize = { version = "1.8.2", default-features = false, features = ["alloc"] }

[dev-dependencies]
tempfile = { version = "3.23.0", default-features = false, features = ["getrandom"] }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
